--- a/src/history/Makefile
+++ b/src/history/Makefile
@@ -11,12 +11,12 @@ CLEANED_VACANCY_CSVS = $(patsubst vacancy_history/data/raw/%.csv,vacancy_history
 
 # By default, build the database
 .PHONY: all, clean
-all: separated_database.db
+all: database.db
 clean:
-	rm -f $(RAW_COURSEREG_CSVS) $(RAW_VACANCY_CSVS) $(CLEANED_COURSEREG_CSVS) $(CLEANED_VACANCY_CSVS) separated_database.db
+	rm -f $(RAW_COURSEREG_CSVS) $(RAW_VACANCY_CSVS) $(CLEANED_COURSEREG_CSVS) $(CLEANED_VACANCY_CSVS) database.db
 
 # Build the database from all cleaned CSVs
-separated_database.db: $(CLEANED_COURSEREG_CSVS) $(CLEANED_VACANCY_CSVS)
+database.db: $(CLEANED_COURSEREG_CSVS) $(CLEANED_VACANCY_CSVS)
 	python import_csv_to_db.py $^;\
 	python merge_db.py $(CLEANED_COURSEREG_CSVS);\
 	python import_csv_to_db.py --clean $^;
