Ignore unused files in deployment

--- a/.vercelignore
+++ b/.vercelignore
@@ -4,3 +4,8 @@ __pycache__
 
 README.md
 tests
+
+src/history/database.db
+src/history/coursereg_history/data/cleaned/
+src/history/coursereg_history/data/raw
+src/history/vacancy_history/data/*
