--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,18 @@
-Flask==2.3.2
-pandas==2.0.2
+blinker==1.7.0
+build==1.0.3
+click==8.1.7
+Flask==3.0.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+numpy==1.26.2
+packaging==23.2
+pandas==2.1.4
+pyproject_hooks==1.0.0
+python-dateutil==2.8.2
+pytz==2023.3.post1
+setuptools==69.0.2
+six==1.16.0
+tzdata==2023.3
+Werkzeug==3.0.1
+wheel==0.42.0
