--- a/.github/workflows/python_unittest.yaml
+++ b/.github/workflows/python_unittest.yaml
@@ -23,6 +23,10 @@ jobs:
         run: |
           pip install -r requirements.txt
 
+      - name: Create database
+        run:
+          make all
+
       - name: Run unit tests
         run: |
           python -m unittest discover
