--- a/.github/workflows/python_unittest.yaml
+++ b/.github/workflows/python_unittest.yaml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 
     steps:
       - name: Checkout repository
@@ -17,7 +17,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: 3.11.4
+          python-version: 3.12.0
 
       - name: Set PYTHONPATH
         run: |
