--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 blinker==1.7.0
 build==1.0.3
 click==8.1.7
+distro==1.8.0
 Flask==3.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
@@ -13,6 +14,7 @@ python-dateutil==2.8.2
 pytz==2023.3.post1
 setuptools==69.0.2
 six==1.16.0
+tabula-py==2.9.0
 tzdata==2023.3
 Werkzeug==3.0.1
 wheel==0.42.0
