--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ pandas-stubs==2.1.1.230928
 pyproject_hooks==1.0.0
 python-dateutil==2.8.2
 pytz==2023.3.post1
+ruff==0.1.8
 setuptools==69.0.2
 six==1.16.0
 tabula-py==2.9.0
