Make git ignore `.DS_store` from MacOS by updating `.gitignore`
Make git ignore `.DS_store` from MacOS by updating `.gitignore`

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@ src/history/coursereg_history/data/raw
 src/history/vacancy_history/data/cleaned
 src/history/vacancy_history/data/raw
 src/web/static/pages
+
+
+
+.DS_store
