Ignore Ruff FA100 for Py3.9
The recommended resolution asks to from __future__ import annotations,
which only then results in Ruff asking to use X|Y instead of Union[X,
Y]. Note that X|Y is a Py3.10 syntax (see PEP-0585).

--- a/ruff.toml
+++ b/ruff.toml
@@ -11,6 +11,7 @@ ignore = [
   "UP015", # Increase readability when opening with mode='r'
   "ANN101", # Ignore type requirement for self
   "N806", # Allow uppercase variables when it is constant
+  "FA100", # x | Y annotations is >=Py3.10, FA100 asks __future__'s annotations, which gives X|Y
 ]
 
 unfixable = []
